# tron1-deploy-arm-control

./: 1009.pptx  project_readme.md
devel/: .catkin  local_setup.fish  setup.sh
devel/include/limxsdk/: macros.h
devel/lib/armeepose/: arm_eepose_bridge
devel/lib/limxsdk_lowlevel/: pf_groupJoints_move  pf_joint_move
devel/lib/pkgconfig/: airbot_sdk.pc  armeepose.pc  limxsdk_lowlevel.pc  limxsdk_sim.pc  pointfoot_gazebo.pc  robot_common.pc  robot_controllers.pc  robot_description.pc  robot_hw.pc  robot_visualization.pc
devel/lib/robot_hw/: pointfoot_node
devel/share/airbot_sdk/cmake/: airbot_sdkConfig.cmake
devel/share/armeepose/cmake/: armeeposeConfig.cmake
devel/share/limxsdk_lowlevel/cmake/: limxsdk_lowlevelConfig.cmake
devel/share/limxsdk_sim/cmake/: limxsdk_simConfig.cmake
devel/share/pointfoot_gazebo/cmake/: pointfoot_gazeboConfig.cmake
devel/share/robot_common/cmake/: robot_commonConfig.cmake
devel/share/robot_controllers/cmake/: robot_controllersConfig.cmake
devel/share/robot_description/cmake/: robot_descriptionConfig.cmake
devel/share/robot_hw/cmake/: robot_hwConfig.cmake
devel/share/robot_visualization/cmake/: robot_visualizationConfig.cmake
install/: .rosinstall  local_setup.fish  local_setup.sh  setup.fish
install/lib/armeepose/: arm_eepose_bridge
install/lib/limxsdk_lowlevel/: pf_groupJoints_move  pf_joint_move
install/lib/pkgconfig/: airbot_sdk.pc  armeepose.pc  limxsdk_sim.pc  robot_common.pc  robot_description.pc
install/lib/robot_hw/: pointfoot_node
install/share/airbot_sdk/cmake/: airbot_sdkConfig.cmake
install/share/armeepose/: package.xml
install/share/limxsdk_lowlevel/cmake/: limxsdk_lowlevelConfig.cmake
install/share/limxsdk_sim/cmake/: limxsdk_simConfig.cmake
install/share/robot_common/cmake/: robot_commonConfig.cmake
src/tron1-rl-deploy-ros/armeepose/: CMakeLists.schemeB.txt  CMakeLists.txt  read.md
src/tron1-rl-deploy-ros/armeepose/launch/: arm_eepose_bridge.launch
src/tron1-rl-deploy-ros/armeepose/src/: ArmEeposeBridge.cpp
src/tron1-rl-deploy-ros/robot_hw/: CMakeLists.txt  package.xml
tools/: world_base.py  点云变换ros.md
tools/robot_bridge/: robot_state_bridge.py  robot_state_bridge（复件）.py
tools/ros_tf/: dynamic_pointcloud_to_ankle.py  frames.gv  latency_check.py  stamp.py
tools/world_base/: world_base.py  world_base.py.txt  world_base.txt
(+4 files in other folders)
